fix alignment issue

--- a/src/WorkoutRunner.css
+++ b/src/WorkoutRunner.css
@@ -49,7 +49,6 @@
     margin: 0;
     line-height: 1;
     transition: color 0.3s ease; /* Smooth transition for color change */
-    margin-top: 14px;
   }
 
   /* Styles for the pause indicator */
@@ -132,4 +131,11 @@
 
   .end-workout:hover {
     background-color: #c82333;
+  }
+
+  /* Firefox-specific rule */
+  @-moz-document url-prefix() {
+    .countdown {
+      margin-top: 14px;
+    }
   }
